--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,6 @@ jobs:
 
       - name: Exibir mensagem de sucesso
         run: echo "Pipeline executado com sucesso 🎉"
+        
+      - name: Rodar ESLint
+        run: npm run lint
