--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,36 @@
-name: CI Pipeline
+name: Pipeline CI/CD
 
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  lint:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout do código
+      - name: 🔍 Checkout do código
         uses: actions/checkout@v4
 
-      - name: Configurar Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
+      - name: 🧱 Etapa 1 - Verificação inicial
+        run: echo "Iniciando o pipeline CI/CD 🚀"
 
-      - name: Instalar ESLint
-        run: npm install eslint --save-dev
+      - name: ⚙️ Etapa 2 - Simular build do projeto
+        run: |
+          echo "Executando build do projeto..."
+          sleep 2
+          echo "✅ Build concluído com sucesso!"
 
-      - name: Rodar ESLint
-        run: npx eslint .
+      - name: 🧪 Etapa 3 - Simular testes automatizados
+        run: |
+          echo "Rodando testes simulados..."
+          sleep 2
+          echo "✅ Todos os testes passaram!"
+
+      - name: 🚀 Etapa 4 - Simular implantação
+        run: |
+          echo "Realizando deploy simulado..."
+          sleep 2
+          echo "🚀 Deploy finalizado com sucesso!"
