--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Pipeline CI
+name: 🚀 Pipeline CI/CD Criativo
 
 on:
   push:
@@ -8,32 +8,39 @@ on:
 
 jobs:
   build:
+    name: 🔧 Construção e Testes
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout do código
+      - name: 📥 Checkout do código
         uses: actions/checkout@v4
 
-      - name: Configurar Node.js
+      - name: ⚙️ Configurar ambiente Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          
-      - name: Instalar dependências
+
+      - name: 📦 Instalar dependências
         run: |
           if [ -f "package.json" ]; then
             npm install
           else
-            echo "Nenhum package.json encontrado — pulando instalação."
+            echo "⚠️ Nenhum package.json encontrado."
           fi
 
-      - name: Rodar testes
+      - name: 🧪 Executar testes
+        run: npm test
+
+      - name: 🏗️ Criar build fictício
         run: |
-          if [ -f "package.json" ]; then
-            npm test || echo "Nenhum teste definido."
-          else
-            echo "Sem testes para rodar."
-          fi
+          mkdir -p dist
+          echo "Build gerado com sucesso em $(date)" > dist/build-info.txt
 
-      - name: Finalização
-        run: echo "✅ Pipeline executado com sucesso!"
+      - name: 📤 Publicar artefato
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-gerado
+          path: dist/
+
+      - name: 🎉 Conclusão
+        run: echo "✅ Pipeline finalizado com sucesso! Tudo funcionando perfeitamente. ✨"
